--- a/todo.txt
+++ b/todo.txt
@@ -3,17 +3,12 @@ cur step :
 next tasks: 
  
  - corresponding prefabs : 
-	+ test Propagate() func all cases
-	+ test error messages (play & cancel)
-
 	+ test Animations (play & cancel)
 		+ classical unity animator stuff
+		
+		+ installing visual effect graph 
+		+ upgrading unity (so FX graph is supported on URP)
 		+ fx 
-	+ write in tech doc :
-		+ submodel instantiation/SetActive(true/false)
-		+ test 2 different layers
-		+ white board ideas
-		+ need anchors in anims (to be able to follow pos and rot but not scale)
  - should manage animations types w/ scriptable objects ? 
  - put visual effect on organism (appart from logic code)
 	-> Passive.onActivation()
@@ -23,3 +18,4 @@ next tasks:
  - model anchor system ? (to place automatically sub-models on their parent 
 	depending on which spots are free, to avoid sub-model overlapping)
  - Camera management
+
