--- a/todo.txt
+++ b/todo.txt
@@ -5,11 +5,10 @@ next tasks:
  - corresponding prefabs : 
 	+ test Animations (play & cancel)
 		+ classical unity animator stuff
-		
 		+ installing visual effect graph 
 		+ upgrading unity (so FX graph is supported on URP)
 		+ fx 
- - should manage animations types w/ scriptable objects ? 
+
  - put visual effect on organism (appart from logic code)
 	-> Passive.onActivation()
 	-> Ability.onActivation()
@@ -19,3 +18,4 @@ next tasks:
 	depending on which spots are free, to avoid sub-model overlapping)
  - Camera management
 
+ (?) should manage animations types w/ scriptable objects ? 
