auto destroy VFX & new anim procedure txt

--- a/todo.txt
+++ b/todo.txt
@@ -19,3 +19,5 @@ next tasks:
  - Camera management
 
  (?) should manage animations types w/ scriptable objects ? 
+ (!) make an fx manager and take fxs out of Cascading Animator
+     (example a bullet shooting doesnt have any anim but launch fx, + fx isnt an anim) 
