--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,10 @@
 done: 
 
-- finish UI_GeneSelector.cs 
-	v select gene w/ dropdown 
-	v SetGeneToDropdownValue() 
-	v UI_GeneSelector change OrganismBuilder.curDNA
+- gene selection UI
 
 todo next:
 
-- add multiple cell (multiple UI_GeneSelector)
-- put restriction on when player can interact w/ asteroid 
+- remove cell
+- reset UI on opening
+
+- UI Organism !!
