Camera tracking asteroid / organism
- made Org Factory a singleton, taken out from Asteroid
- TheCameraManager manage the main camera
- TheGameState store main datas (curAsteroid, curAsteroid)
- organism life timer UI

--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,10 @@
 done: 
 
-- gene selection UI
-
-todo next:
-
 - remove cell
 - reset UI on opening
+
+(UI asteroid "create organism (v.1)" completed
+
+todo next:
 
 - UI Organism !!
